// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scripts/config/env loadConfig basic check with process.env == "development" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://api.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "development",
}
`;

exports[`scripts/config/env loadConfig basic check with process.env == "production" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://api.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "production",
}
`;

exports[`scripts/config/env loadConfig basic check with process.env == "test" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://api.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "test",
}
`;

exports[`scripts/config/env loadConfig local check with process.env == "development" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://dev.example.local",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "false",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "1000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome local",
  "NODE_ENV": "development",
}
`;

exports[`scripts/config/env loadConfig local check with process.env == "production" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://prod.example.local",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome local",
  "NODE_ENV": "production",
}
`;

exports[`scripts/config/env loadConfig local check with process.env == "test" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://api.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "test",
}
`;

exports[`scripts/config/env loadConfig simple check with process.env == "development" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://dev.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "false",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "1000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "development",
}
`;

exports[`scripts/config/env loadConfig simple check with process.env == "production" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://prod.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "production",
}
`;

exports[`scripts/config/env loadConfig simple check with process.env == "test" 1`] = `
Object {
  "DOTENV_PREFIX_TEST_API": "https://api.example.com",
  "DOTENV_PREFIX_TEST_API_CACHE_ENABLED": "true",
  "DOTENV_PREFIX_TEST_API_TIMEOUT": "10000",
  "DOTENV_PREFIX_TEST_TITLE": "Welcome",
  "NODE_ENV": "test",
}
`;
